RESOLVED FIXED301714
Assert when ProcessThrottler is used off of the main thread
https://bugs.webkit.org/show_bug.cgi?id=301714
Summary Assert when ProcessThrottler is used off of the main thread
Ben Nham
Reported 2025-10-30 14:22:13 PDT
See PR
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-30 14:22:20 PDT
Ben Nham
Comment 2 2025-10-30 14:25:27 PDT
EWS
Comment 3 2025-10-31 12:14:49 PDT
Committed 302397@main (5dd0f6f337f2): <https://commits.webkit.org/302397@main> Reviewed commits have been landed. Closing PR #53219 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.