Assert when ProcessThrottler is used off of the main thread https://bugs.webkit.org/show_bug.cgi?id=301714 rdar://163741299

Reviewed by Chris Dumez.

We see crashes and CPU spins in ProcessThrottler due to the HashMap in ProcessAssertionCache ending
up in a corrupt state. The logs are showing that this map is being mutated by multiple threads
(e.g. clients who call `-evaluateJavascript:completionHandler:` on a background thread).

This patch notifies the client about misuse of WebKit APIs off the main thread with a fault. When
linking against newer SDKs, we make this an actual RELEASE_ASSERT and crash the entire UIProcess.

* Source/WTF/wtf/cocoa/RuntimeApplicationChecksCocoa.h:
* Source/WebKit/UIProcess/ProcessThrottler.cpp:
(WebKit::assertIfCalledFromBackgroundThread):
(WebKit::ProcessThrottler::addActivity):
(WebKit::ProcessThrottler::removeActivity):
(WebKit::ProcessThrottler::invalidateAllActivities):
(WebKit::ProcessThrottler::setThrottleState):

Canonical link: https://commits.webkit.org/302397@main